--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
             <TD VALIGN="middle">
               <h2 id="name">Xiangkun Jia</h2>
               <strong>
-              I am now working in Ant Financial, Alibaba as a Senior Engineer,<br> 
-              for infra and data-system engineering.           
+              I am now working in Ant Financial, Alibaba,<br> 
+              as a Senior Engineer in Group of infra and data-system engineering.           
               </strong><br><br>
 
               <strong>
@@ -80,7 +80,7 @@
                   and Professor <a href="https://dblp.uni-trier.de/pers/hd/f/Feng:Dengguo"> Dengguo Feng </a>.<br>
                   I obtained my B.E. degree of Information Security from
                   <a href="http://en.hit.edu.cn/">Harbin Institute of Technology (HIT)</a> in 2012.<br>
-                  I was exchange to <a href="http://en.fcu.edu.tw/"> Feng Chia University </a> in 2010 for a
+                  I was exchanged to <a href="http://en.fcu.edu.tw/"> Feng Chia University </a> in 2010 for a
                   semester.<br>
 		  I was a Postdoc at the <a href="https://plato.ist.psu.edu/">Software Systems Security</a> lab headed by Professor <a
                   href="https://faculty.ist.psu.edu/wu/">Dinghao Wu</a>.<br>
@@ -96,15 +96,14 @@
                   <h2>Research:</h2>
                   <p>
                     <font size="+1">
-					              My research interests focus on <b> software security</b> and <b>software
-                        engineering</b>,
+					              My research interests focus on <b> software security</b>,
                       including <b>program analysis</b>, <b>vulnerability analysis</b> and <b>malware detection</b>
                     </font>
-                    .<br>
-                    The methods involves taint analysis, symbolic execution, fuzzing, virtualization and reverse
+                    .
+                    The methods involve taint analysis, symbolic execution, fuzzing, virtualization and reverse
                     engineering.
                     <br>
-                    I am now working on fuzzing, hardware-assistent analysis and side-channel attacks. 
+                    I am now working on fuzzing, hardware-assistent program analysis and side-channel attacks.<br>
                     There were several projects I worked in, including
                   </p>
                 </div>
