--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
             <TD VALIGN="middle">
               <h2 id="name">Xiangkun Jia</h2>
               <strong>
-              I am now working in Ant Financial, Alibaba,<br> 
-              as a Senior Engineer in Group of infra and data-system engineering.           
+              I am now working in Ant Financial, Alibaba as a Senior Engineer,<br> 
+              in Group of infra and data-system engineering.           
               </strong><br><br>
 
               <strong>
