--- a/index.html
+++ b/index.html
@@ -86,11 +86,11 @@
                   href="https://faculty.ist.psu.edu/wu/">Dinghao Wu</a>.<br>
                   in <a href="http://ist.psu.edu/">College of Information Sciences and Technology</a> of <a href="http://www.psu.edu/">The Pennsylvania State University</a> 
 			in 2018-2019.<br>
-                  Here is my
+                  <!--Here is my
                   <font size="+1"><b>
                       <a href="jia-CV.pdf">[CV]</a>
                     </b></font>
-                </div>
+                </div> -->
 
                 <div class="open-header">
                   <h2>Research:</h2>
