--- a/index.html
+++ b/index.html
@@ -131,20 +131,20 @@
                 </div>
                 <h3>Papers</h3>
                 <ul>
-	          <li>
+	                <li>
                     <b>
                       <a href="papers/ndss20-fall-paper422.pdf">Not All Coverage Measurements Are Equal: Fuzzing by Coverage Accounting for Input Prioritization</a>
                     </b>
                     <br>
-	            Yanhao Wang,
+	                  Yanhao Wang,
                     <b><i>Xiangkun Jia</i></b>,
                     Yuwei Liu,
-	            Kyle Zeng,
-	            Tiffany Bao,
-		    Dinghao Wu,
+	                  Kyle Zeng,
+	                  Tiffany Bao,
+		                Dinghao Wu,
                     Purui Su
                     <br>
-                    NDSS 2020
+                    <b>NDSS 2020</b>
                     <br>
             
                     <br>
