--- a/index.html
+++ b/index.html
@@ -24,16 +24,15 @@
             <TD VALIGN="middle">
               <h2 id="name">Xiangkun Jia</h2>
               <strong>
-              I am now working in Ant Financial, Alibaba as a Senior Engineer,<br> 
-              in Group of infra and data-system engineering.           
+              I am now working in Institute of Software Chinese Academy of Sciences,<br> 
+              in the group of Purui Su as an Assistent Professor.           
               </strong><br><br>
 
               <strong>
                 Mailing Address:
               </strong><br>
-              9F East Tower of Beijing World Financial Center,<br> 
-		    NO. 1 East 3rd Ring Middle Road, <br>
-		    Chaoyang Distribute, Beijing, China, 100020<br>
+                4# South Fourth Street, Zhong Guan Cun, Beijing, <br>
+　　　　         P.R. China, 100190<br> 
               <strong>
                 Phone:
               </strong><br>
@@ -42,9 +41,9 @@
                 Email:
               </strong><br>
               <script language=javascript>
-                var who = "xiangkun.jxk"
-                var where = "antfin"
-                var domain = "com"
+                var who = "xiangkun"
+                var where = "iscas.ac"
+                var domain = "cn"
                 var email = who + "@" + where + "." + domain
                 document.write("<a href=" + "mail" + "to:" + email + ">" + email + "</a>")
               </script><br>
