--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <HTML>
 
 <HEAD>
+  <meta name="baidu-site-verification" content="Xr5ufK1gYW" />
   <TITLE>Xiangkun Jia's Home Page</TITLE>
   <link rel="stylesheet" type="text/css" href="wu.css" />
 </HEAD>
