--- a/index.html
+++ b/index.html
@@ -108,19 +108,14 @@
                   </p>
                 </div>
                 <div>
-                  <ul>
-                    <li><b>Reassemble disassembling:</b>
-                      Improve Project Uroboros which is a binary analysis and rewrite tool and apply it to kinds of scenarios.
+                  <ul>                  
+                    <li><b>Vulnerability discovery/detection/assessment</b>
                     </li>
-                    <li><b>Heap overflow vulnerability discovery/detection/assessment:</b>
-                      Designed and implemented a system to discover/detect/assess heap overflow vulnerabilities based on
-                      dynamic taint analysis and symbolic execution.
+                    <li><b>Application-oriented taint analysis system</b>
                     </li>
-                    <li><b>Application-oriented taint analysis system development:</b>
-                      Implemented hook functions for taint sources and heap allocation operations.
+                    <li><b>Malware detection and analysis platform</b>
                     </li>
-                    <li><b>Malware detection and analysis platform development:</b>
-                      Implemented interaction analysis tools for malware detection based MFC.
+		    <li><b>Reassemble disassembling</b> 
                     </li>
                   </ul>
                 </div>
@@ -277,6 +272,7 @@
                 </div>
                 <div>
                   <ul><b>
+		      <li> The Third Prize of BCTF AUTOPWN (20200807) founded by Baidu </li>
                       <li> Internet security scholarship of CHINA internet development foundation in 2017 </li>
                       <li> National Scholarship in 2017</li>
                       <li> Excellent graduate of Heilongjiang Province in China in 2012</li>
