--- a/index.html
+++ b/index.html
@@ -32,8 +32,7 @@
               <strong>
                 Mailing Address:
               </strong><br>
-                4# South Fourth Street, Zhong Guan Cun, Beijing, <br>
-　　　　         P.R. China, 100190<br> 
+                4# South Fourth Street, Zhong Guan Cun, Beijing, P.R. China, 100190<br> 
               <strong>
                 Phone:
               </strong><br>
@@ -84,7 +83,7 @@
                   semester.<br>
 		  I was a Postdoc at the <a href="https://plato.ist.psu.edu/">Software Systems Security</a> lab headed by Professor <a
                   href="https://faculty.ist.psu.edu/wu/">Dinghao Wu</a>.<br>
-                  in <a href="http://ist.psu.edu/">College of Information Sciences and Technology</a> of <a href="http://www.psu.edu/">The Pennsylvania State University</a> 
+                  in College of Information Sciences and Technology of <a href="http://www.psu.edu/">The Pennsylvania State University</a> 
 			in 2018-2019.<br>
                   <!--Here is my
                   <font size="+1"><b>
@@ -103,8 +102,8 @@
                     The methods involve taint analysis, symbolic execution, fuzzing, virtualization and reverse
                     engineering.
                     <br>
-                    I am now working on fuzzing, hardware-assistent program analysis and side-channel attacks.<br>
-                    There were several projects I worked in, including
+                    I am now working on fuzzing, program analysis and vulnerability exploit.<br>
+                    There are several projects including
                   </p>
                 </div>
                 <div>
