--- a/index.html
+++ b/index.html
@@ -102,8 +102,7 @@
                     The methods involve taint analysis, symbolic execution, fuzzing, virtualization and reverse
                     engineering.
                     <br>
-                    I am now working on fuzzing, program analysis and vulnerability exploit.<br>
-                    There are several projects including
+                    I am now working on fuzzing, program analysis and vulnerability exploit. There are several projects including
                   </p>
                 </div>
                 <div>
