--- a/index.html
+++ b/index.html
@@ -251,10 +251,10 @@
                 <h3>Sub-reviewer</h3>
                 <ul>
                   <li>
-                    Conferences including CCS'2019, CNS'2019, CSET'17, RAID'17, VARA'17, CODASPY'16
+                    Conferences including AsiaCCS'2020, CCS'2019, CNS'2019, CSET'17, RAID'17, VARA'17, CODASPY'16
                   </li>
                   <li>
-                    Journals including Transactions on Software Engineering, Chinese Journal of Computers, Journal of
+                    Journals including IEEE Transactions on Network and Service Management, Transactions on Software Engineering, Chinese Journal of Computers, Journal of
                     Software, Chinese Journal of Electronics
                   </li>
                 </ul>
