add ASE 2021 paper

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
               <h2 id="name">Xiangkun Jia</h2>
               <strong>
               I am now working in Institute of Software Chinese Academy of Sciences,<br> 
-              in the group of Purui Su as an Assistent Professor.           
+              in the group of Purui Su as an Associate Professor.           
               </strong><br><br>
 
               <strong>
@@ -124,6 +124,23 @@
                 </div>
                 <h3>Papers</h3>
                 <ul>
+                  <li>
+                    <b>
+                      <a href="papers/ASE_2021.pdf">InstruGuard: Find and Fix Instrumentation Errors for Coverage-based Greybox Fuzzing</a>
+                    </b>
+                    <br>
+                    Yuwei Liu,
+	                  Yanhao Wang,
+                    Purui Su,
+                    Yuanping Yu,
+                    <b><i>Xiangkun Jia</i></b>,
+                    <br>
+                    <b>ASE 2021</b>
+		    <br>
+		    The code is released at https://github.com/Marsman1996/instruguard
+                  </li>
+                  <br>
+
 	                <li>
                     <b>
                       <a href="papers/ndss20-fall-paper422.pdf">Not All Coverage Measurements Are Equal: Fuzzing by Coverage Accounting for Input Prioritization</a>
@@ -251,7 +268,7 @@
                 <h3>Sub-reviewer</h3>
                 <ul>
                   <li>
-                    Conferences including AsiaCCS'2020, CCS'2019, CNS'2019, CSET'17, RAID'17, VARA'17, CODASPY'16
+                    Conferences including AsiaCCS'2021, ICICS'2021, ICICS'2020, CCS'2019, CNS'2019, CSET'17, RAID'17, VARA'17, CODASPY'16
                   </li>
                   <li>
                     Journals including IEEE Transactions on Network and Service Management, Transactions on Software Engineering, Chinese Journal of Computers, Journal of
@@ -270,7 +287,8 @@
                 </div>
                 <div>
                   <ul><b>
-		      <li> The Third Prize of BCTF AUTOPWN (20200807) founded by Baidu </li>
+                      <li> The First Prize of "ZongHengBei" RHG AUTOPWN </li>
+		                  <li> The Third Prize of BCTF AUTOPWN (20200807) founded by Baidu </li>
                       <li> Internet security scholarship of CHINA internet development foundation in 2017 </li>
                       <li> National Scholarship in 2017</li>
                       <li> Excellent graduate of Heilongjiang Province in China in 2012</li>
