--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <TABLE>
           <TR>
             <TD>&nbsp; &nbsp; &nbsp;</TD>
-            <TD VALIGN="middle"><IMG src="jia.jpg" border=0 alt="Xiangkun Jia" width="350" height="400"></TD>
+            <TD VALIGN="middle"><IMG src="jia2.jpg" border=0 alt="Xiangkun Jia" width="350" height="400"></TD>
             <TD>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</TD>
 
             <TD VALIGN="middle">
