--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                 <ul>
                   <li>
                     <b>
-                      <a href="papers/ASE_2021.pdf">InstruGuard: Find and Fix Instrumentation Errors for Coverage-based Greybox Fuzzing</a>
+                      <a href="">InstruGuard: Find and Fix Instrumentation Errors for Coverage-based Greybox Fuzzing</a>
                     </b>
                     <br>
                     Yuwei Liu,
