--- a/index.html
+++ b/index.html
@@ -204,6 +204,22 @@
                   </li>
                   <br>
 
+                  
+                  <li>
+                    <b>
+                      <a href="">Automatic exploitation generation method of write-what-where vulnerability</a>
+                    </b>
+                    <br>
+                    Huafeng Huang,
+                    Purui Su,
+                    Yi Yang,
+                    <b><i>Xiangkun Jia</i></b>,
+                    <br>
+                    Journal on Communications. Vol. 43 No. 1, 2022. Journal in Chinese.
+                    <br>
+                  </li>
+                  <br>
+
                   <li>
                     <b>
                       <a href="papers/protocol.pdf">Safety analysis and evaluation of security protocol
