--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                     Yi Yang,
                     <b><i>Xiangkun Jia</i></b>,
                     <br>
-                    Journal on Communications. Vol. 43 No. 1, 2022. Journal in Chinese.
+                    <b>Journal on Communications.</b> Vol. 43 No. 1, 2022. Journal in Chinese.
                     <br>
                   </li>
                   <br>
@@ -152,7 +152,7 @@
                     Yuanping Yu,
                     <b><i>Xiangkun Jia</i></b>,
                     <br>
-                    <b>ASE 2021</b>
+                    The 37th IEEE/ACM International Conference on Automated Software Engineering (<b>ASE 2021</b>)
                     <br>
                     The code is released at https://github.com/Marsman1996/instruguard
                   </li>
@@ -232,7 +232,7 @@
                     Jia Yan,
                     Purui Su
                     <br>
-                    Bulletin of Chinese Association for Cryptologic Research. Issue 6, 2014. Journal in Chinese.
+                    <b>Bulletin of Chinese Association for Cryptologic Research.</b> Issue 6, 2014. Journal in Chinese.
                     <br>
                   </li>
                   <br>
