--- a/index.html
+++ b/index.html
@@ -170,10 +170,9 @@
 	                  Tiffany Bao,
 		                Dinghao Wu,
                     Purui Su
-                    <br>
-                    <b>NDSS 2020</b>
-		    <br>
-		    The code is released at https://github.com/TortoiseFuzz/TortoiseFuzz
+                    <br>The Network and Distributed System Security Symposium (<b>NDSS 2020</b>)    
+		                <br>
+		                The code is released at https://github.com/TortoiseFuzz/TortoiseFuzz
                   </li>
                   <br>
 			
