--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <TABLE>
           <TR>
             <TD>&nbsp; &nbsp; &nbsp;</TD>
-            <TD VALIGN="middle"><IMG src="jia2.jpg" border=0 alt="Xiangkun Jia" width="250" height="350"></TD>
+            <TD VALIGN="middle"><IMG src="jia3.jpg" border=0 alt="Xiangkun Jia" width="250" height="320"></TD>
             <TD>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</TD>
 
             <TD VALIGN="middle">
@@ -82,8 +82,7 @@
                   I was exchanged to <a href="http://en.fcu.edu.tw/"> Feng Chia University </a> in 2010 for a
                   semester.<br>
 		  I was a Postdoc at the <a href="https://plato.ist.psu.edu/">Software Systems Security</a> lab headed by Professor <a
-                  href="https://faculty.ist.psu.edu/wu/">Dinghao Wu</a>.<br>
-                  in College of Information Sciences and Technology of <a href="http://www.psu.edu/">The Pennsylvania State University</a> 
+                  href="https://faculty.ist.psu.edu/wu/">Dinghao Wu</a> in College of Information Sciences and Technology of The Pennsylvania State University (PSU) 
 			in 2018-2019.<br>
                   <!--Here is my
                   <font size="+1"><b>
@@ -96,13 +95,12 @@
                   <p>
                     <font size="+1">
 					              My research interests focus on <b> software security</b>,
-                      including <b>program analysis</b>, <b>vulnerability analysis</b> and <b>malware detection</b>
+                      including <b>program analysis</b>, <b>vulnerability analysis</b> and <b>malware detection</b>.
                     </font>
-                    .
-                    The methods involve taint analysis, symbolic execution, fuzzing, virtualization and reverse
-                    engineering.
+                    The methods involve taint analysis, symbolic execution, fuzzing and reverse engineering.
+                    Machine-learning methods are also used for solving software security problems.
                     <br>
-                    I am now working on fuzzing, program analysis and vulnerability exploit. There are several projects including
+                    I am now working on fuzzing, program analysis and vulnerability exploit. There are several projects including: 
                   </p>
                 </div>
                 <div>
@@ -113,7 +111,7 @@
                     </li>
                     <li><b>Malware detection and analysis platform</b>
                     </li>
-		    <li><b>Reassemble disassembling</b> 
+                    <li><b>Software supply chain security</b>
                     </li>
                   </ul>
                 </div>
@@ -124,6 +122,57 @@
                 </div>
                 <h3>Papers</h3>
                 <ul>
+                  <!--begin-->
+                  <li>
+                    <b>
+                      <a href="">Understanding and Mitigating Label Bias in Malware Classification: An Empirical Study</a>
+                    </b>
+                    <br>
+                    Huafeng Huang,
+                    Purui Su,
+                    Yi Yang,
+                    <b><i>Xiangkun Jia</i></b>,
+                    <br>
+                    The 22nd IEEE International Conference on Software Quality, Reliability and Security (<b>QRS 2022</b>)
+                    <br>
+                  </li>
+                  <br>
+                  <!--end-->
+                  <li>
+                    <b>
+                      <a href="">DitDetector: Bimodal Learning based on Deceptive Image and Text for Macro Malware Detection</a>
+                    </b>
+                    <br>
+                    Jia Yan,
+                    Ming Wan,
+                    <b><i>Xiangkun Jia</i></b>,
+                    Lingyun Ying,
+                    Purui Su,
+                    Zhanyi Wang,
+                    <br>
+                    The Annual Computer Security Applications Conference (<b>ACSAC 2022</b>)
+                    <br>
+                  </li>
+                  <br>
+
+                  <li>
+                    <b>
+                      <a href="">HTFuzz: Heap Operation Sequence Sensitive Fuzzing</a>
+                    </b>
+                    <br>
+                    Yuanping Yu,
+                    <b><i>Xiangkun Jia</i></b>,
+                    Yuwei Liu,
+                    Yanhao Wang,
+                    Qian Sang,
+                    Chao Zhang,
+                    Purui Su,
+                    <br>
+                    The 38th IEEE/ACM International Conference on Automated Software Engineering (<b>ASE 2022</b>)
+                    <br>
+                    The code is released at <b>https://github.com/sharedata21/HTFuzz</b>
+                  </li>
+                  <br>
 
                   <li>
                     <b>
@@ -154,7 +203,7 @@
                     <br>
                     The 37th IEEE/ACM International Conference on Automated Software Engineering (<b>ASE 2021</b>)
                     <br>
-                    The code is released at https://github.com/Marsman1996/instruguard
+                    The code is released at <b>https://github.com/Marsman1996/instruguard</b>
                   </li>
                   <br>
 
@@ -172,7 +221,7 @@
                     Purui Su
                     <br>The Network and Distributed System Security Symposium (<b>NDSS 2020</b>)    
 		                <br>
-		                The code is released at https://github.com/TortoiseFuzz/TortoiseFuzz
+		                The code is released at <b>https://github.com/TortoiseFuzz/TortoiseFuzz</b>
                   </li>
                   <br>
 			
