--- a/index.html
+++ b/index.html
@@ -128,10 +128,11 @@
                       <a href="">Understanding and Mitigating Label Bias in Malware Classification: An Empirical Study</a>
                     </b>
                     <br>
-                    Huafeng Huang,
-                    Purui Su,
-                    Yi Yang,
+                    Jia Yan,
                     <b><i>Xiangkun Jia</i></b>,
+                    Lingyun Ying,
+                    Jia Yan,
+                    Purui Su,
                     <br>
                     The 22nd IEEE International Conference on Software Quality, Reliability and Security (<b>QRS 2022</b>)
                     <br>
