--- a/old-version/index.html
+++ b/old-version/index.html
@@ -324,7 +324,7 @@
 
 
                 <div class="page-header">
-                  <h2>Professional Activities:</h2>
+                  <h2>Academic Services:</h2>
                 </div>
                 <h3>Student PC</h3>
                 <ul>
